welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:10: error: not found: type int
def lookingFor(nums:Array[int] , value:Int) : Int = {
                          ^indexOfValue:2: error: missing arguments for method lookingFor in class indexOfValue;
follow this method with `_' if you want to treat it as a partially applied function
	if(lookingFor.value){
           ^indexOfValue:10: error: type mismatch;
 found   : Unit
 required: Int
def lookingFor(nums:Array[int] , value:Int) : Int = {
                                                    ^