welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	if(lookingFor.value){
		return -1
	}else{
		return 77
	}
}


def lookingFor(nums:Array[int] , value:Int) : Int = {
	
}
